# CWatch

./: .gitignore  AGENTS.md  README.md
src/ui/: CMakeLists.txt  filelist.txt  honeycomb.c  honeycomb.h  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_start.c  ui_start.h
src/ui/components/: ui_comp_hook.c
src/ui/fonts/: ui_font_chinese.c  ui_font_chinese2.c  ui_font_large.c  ui_font_large_promax.c
src/ui/images/: guanyu.c  liangdu.c  ui_img_1413412855.c  ui_img_1523901040.c  ui_img_1650588022.c  ui_img_1860162427.c  ui_img_411911342.c  ui_img_545021016.c  ui_img_834475774.c  ui_img_altitude_png.c  ui_img_arrow_png.c  ui_img_battery_png.c  ui_img_chatgpt_image1_png.c  ui_img_chatgpt_image2_png.c  ui_img_chatgpt_image_4_png.c  ui_img_clockwise_sec_png.c  ui_img_compass1_png.c  ui_img_compass_png.c  ui_img_env_png.c  ui_img_foot_png.c  ui_img_heart1_png.c  ui_img_heart_png.c  ui_img_hum_png.c  ui_img_light_png.c  ui_img_pngsucai_3128177_ef13f6_png.c  ui_img_press_png.c  ui_img_setting_png.c  ui_img_temp_png.c  ui_img_wave1_png.c  ui_img_wave2_png.c  ui_img_wcloud_png.c  ui_img_weather_cloud_fog_png.c  ui_img_weather_cloud_png.c  ui_img_weather_rain_png.c  ui_img_weather_sun_cloud_png.c  ui_img_weather_sun_png.c  ui_img_wrain_png.c  ui_img_wsun_png.c  ui_img_zhizhen_png.c  zhendong1.c  (+1 more)
src/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_Screen4.h  ui_Screen5.c  ui_Screen5.h  ui_Screen6.c  ui_Screen6.h  ui_Screen7.c  ui_Screen7.h  ui_about.c  ui_about.h  ui_weather.c  ui_weather.h  ui_weather2.c  (+1 more)
(+61 files in other folders)
